--- a/public/templates/addmodify.html
+++ b/public/templates/addmodify.html
@@ -1,3 +1,6 @@
-<div class="product">
-  <h2>This is a product</h2>
+<div class="product" ng-repeat="product in products">
+  <h2>Product: {{product.name}}</h2>
+  <h2>Status: {{product.status}}</h2>
+  <h2>Price: ${{product.price}}</h2>
+
 </div>
