--- a/public/templates/sell.html
+++ b/public/templates/sell.html
@@ -1,9 +1,7 @@
-<div class="nav">
-  <a ui-sref="addmodify">Admin</a>
-</div>
+<h1>Products Page</h1>
 <div class="product" ng-repeat="product in products">
   <h2>Product: {{product.name}}</h2>
-  <h2>Status: {{product.status}}</h2>
+  <h2>Description: {{product.description}}</h2>
   <h2>Price: ${{product.price}}</h2>
   <button>Buy</button>
 
